# dyd

./: .envrc  .gitignore  .rustfmt.toml  .tool-versions  Brewfile  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  default.nix  flake.nix
.config/: medic.toml
.github/workflows/: tests.yml
.medic/: .doctor.out  config.toml
fixtures/: github.toml  invalid_diffool.toml  nonexistent.toml  valid.toml
priv/shell/: dyd-github-compare
src/: app.rs  cli.rs  difftool.rs  event.rs  git.rs  handler.rs  lib.rs  main.rs  manifest.rs  repo.rs  tui.rs
src/app/: event.rs  handler.rs  mod.rs
src/config/: mod.rs
src/git/: mod.rs  repo.rs
src/semaphore/: mod.rs
src/terminal/: mod.rs  tui.rs
src/theme/: mod.rs
src/time/: mod.rs  relative.rs  unix.rs
src/ui/: diff.rs  help.rs  mod.rs  modal.rs  repos.rs  stale.rs
src/widget/: calendar.rs
