[package]
name = "dyd"
authors = ["Eric Saxby", "synchronal.dev"]
description = "CLI for daily diffing of git repos"
edition = "2021"
exclude = ["fixtures/*"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/synchronal/dyd"
resolver = "2"
version = "1.9.0"


[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
envsubst = "0.2"
gix = { version = "0.73", features = ["worktree-mutation", "blocking-network-client", "blocking-http-transport-reqwest", "blocking-http-transport-reqwest-rust-tls"] }
indexmap = "2"
lazy_static = "1"
log = "0.4"
log4rs = { version = "1", features = ["delete_roller", "rolling_file_appender"] }
ratatui = { version = "0.29.0" }
regex = "1"
serde = { version = "1", features = ["derive"] }
terminal-colorsaurus = "1.0"
toml = "0.9"


[features]
strict = [] # Treat warnings as a build error.


[profile.dev]
opt-level = 1 # Enable only a small amount of optimization in debug mode


[profile.dev.package."*"]
opt-level = 3 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
